--- a/client/src/app/components/all-vote/all-vote.component.html
+++ b/client/src/app/components/all-vote/all-vote.component.html
@@ -83,7 +83,7 @@
         </div>
     </section>
     <section id="sectionThree">
-        
+
         <!-- friysday -->
         <div class="divDay">
             <p>10 - 14 ( <span>{{friCount10}}-vote</span> )</p>
@@ -96,6 +96,9 @@
             <p>17 - 21 ( <span>{{friCount17}}-vote</span> )</p>
             <p class="day"> :Friyday ( <span>{{fridayCount}}-vote</span> )</p>
         </div>
+    </section>
+    <section id="maxCountDay">
+        <p>Max vote day and time ( {{nameMaxCount}}:<span>{{maxCountDay}} & {{nameMaxTime}}>>{{maxCountTime}} )</span></p>
     </section>
 
 </main>
