--- a/client/src/app/components/all-vote/all-vote.component.scss
+++ b/client/src/app/components/all-vote/all-vote.component.scss
@@ -69,4 +69,8 @@ main {
         display: flex;
        }
     }
+    #maxCountDay{
+        background-color: red;
+        font-size: 3rem;
+    }
 }
