--- a/client/src/app/components/vote/vote.component.html
+++ b/client/src/app/components/vote/vote.component.html
@@ -110,7 +110,7 @@
                         <mat-checkbox formControlName="friday17To21Ctrl">17 - 21 ساعت</mat-checkbox>
                     </div>
                 </section>
-                <button type="submit" mat-raised-button [disabled]="voteFg.invalid">Submit</button>
+                <button type="submit" mat-raised-button [disabled]="voteFg.invalid">ثبت</button>
             </form>
         </div>
 
