--- a/client/src/app/components/all-vote/all-vote.component.html
+++ b/client/src/app/components/all-vote/all-vote.component.html
@@ -98,7 +98,7 @@
         </div>
     </section>
     <section id="maxCountDay">
-        <p>Max vote day and time ( {{nameMaxCount}}:<span>{{maxCountDay}} & {{nameMaxTime}}>>{{maxCountTime}} )</span></p>
+        <p>Max vote day ( {{nameMaxCount}}:<span>{{maxCountDay}} )</span></p>
     </section>
 
 </main>
