--- a/client/src/app/components/all-vote/all-vote.component.scss
+++ b/client/src/app/components/all-vote/all-vote.component.scss
@@ -70,7 +70,7 @@ main {
        }
     }
     #maxCountDay{
-        background-color: red;
-        font-size: 3rem;
+        text-align: center;
+        font-size: 2rem;
     }
 }
